k8s/bankUI_deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bankingappui-deployment
  namespace: bank
  labels:
    app: bankingUI
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bankUI
  template:
    metadata:
      name: bankUI_Pod
      namespace: bank
      labels:
        app: bankUI
    spec:
      containers:
        - name: bankui
          image: siddhantkudal/banking_app:1
          ports:
            - containerPort: 8080
