k8s/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mysql
  namespace: bank
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      name: mysqlpod
      namespace: mysql
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          ports:
            - containerPort: 3306
