k8s/banking_service.yml
kind: Service
apiVersion: v1
metadata:
  name: bankui-service
  namespace: bank
spec:
  selector:
    app: bankUI
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
