k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name: mysql-service
  namespace: bank
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
